--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,7 @@
               "src/styles.css",
               "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           },
@@ -104,6 +104,10 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
